--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["util", "blockchain"],
+  "author": "Geonil Kim <geonil2sm@gmail.com> (https://github.com/geonil2)",
   "license": "ISC",
   "dependencies": {
     "commander": "^9.3.0"
   },
   "devDependencies": {
-    "@types/pluralize": "^0.0.29",
     "typescript": "^4.7.4"
   }
 }
